<resources>
    <string name="app_name">ALC4 Challenge 1</string>
    <string name="about_alc">About ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="track">Track:</string>
    <string name="track_value">Android</string>
    <string name="country">Country:</string>
    <string name="country_value">Nigeria</string>
    <string name="email">Email:</string>
    <string name="email_value">apeapius@gmail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="phone_value">+2348060386628</string>
    <string name="slack_username">Slack Username:</string>
    <string name="username_value">\@eapius</string>
</resources>
